--- a/src/elements/photo-block.html
+++ b/src/elements/photo-block.html
@@ -1,39 +1,47 @@
-<link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/polymer/polymer-element.html">
 
 <link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../../bower_components/iron-image/iron-image.html">
 
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
-<link rel="import" href="../../bower_components/paper-toolbar/paper-toolbar.html">
 <link rel="import" href="../../bower_components/paper-ripple/paper-ripple.html">
+<link rel="import" href="../../bower_components/plastic-image/plastic-image.html">
 
+<link rel="import" href="./shared-styles.html">
 
 <dom-module id="photo-block">
-
   <template>
+    <style is="custom-style" include="shared-styles flex flex-alignment"></style>
 
-    <style include="shared-styles">
+    <style>
+
       :host {
         display: block;
       }
+
       iron-image {
         @apply(--layout-fit);
       }
+
       .photo-wrapper {
         @apply(--layout-horizontal);
         height: 200px;
       }
+
       .photo {
         @apply(--layout-flex);
         position: relative;
       }
+
       .photo:not(:first-of-type) {
         display: none;
       }
+
       .vertical-block {
         @apply(--layout-vertical);
         @apply(--layout-flex);
       }
+
       .open-photos {
         @apply(--layout-vertical);
         @apply(--layout-center-center);
@@ -46,32 +54,37 @@
         transition: opacity .3s;
         text-align: center;
       }
+
       .open-photos:hover {
         opacity: 1;
         cursor: pointer;
       }
+
       @media (min-width: 601px) {
         .photo-wrapper {
           height: 500px;
         }
+
         .big {
           @apply(--layout-flex-2);
         }
+
         .photo:not(:first-of-type) {
           display: flex;
         }
       }
+
     </style>
 
     <div class="photo-wrapper">
       <div class="photo big">
         <iron-image
           class="placeholder-color"
-          src="[[app.data.gallery.photos.big]]"
+          src="{$ gallery.photos.big $}"
           sizing="cover"
           preload fade
         ></iron-image>
-        <a class="open-photos" href$="[[app.data.gallery.albumUrl]]" target="_blank" rel="noopener noreferrer">
+        <a class="open-photos" href$="https://plus.google.com/u/0/collection/wE4hqB" target="_blank" rel="noopener noreferrer">
           <paper-ripple></paper-ripple>
           <span>Click here to view more photos <iron-icon icon="open-in-new"/></span>
         </a>
@@ -80,11 +93,11 @@
         <div class="photo">
           <iron-image
             class="placeholder-color"
-            src="[[app.data.gallery.photos.small.0]]"
+            src="{$ gallery.photos.small[0] $}"
             sizing="cover"
             preload fade
           ></iron-image>
-          <a class="open-photos" href$="[[app.data.gallery.albumUrl]]" target="_blank" rel="noopener noreferrer">
+          <a class="open-photos" href$="https://plus.google.com/u/0/collection/wE4hqB" target="_blank" rel="noopener noreferrer">
             <paper-ripple></paper-ripple>
             <span>Click here to view more photos <iron-icon icon="open-in-new"/></span>
           </a>
@@ -92,11 +105,11 @@
         <div class="photo">
           <iron-image
             class="placeholder-color"
-            src="[[app.data.gallery.photos.small.1]]"
+            src="{$ gallery.photos.small[1] $}"
             sizing="cover"
             preload fade
           ></iron-image>
-          <a class="open-photos" href$="[[app.data.gallery.albumUrl]]" target="_blank" rel="noopener noreferrer">
+          <a class="open-photos" href$="https://plus.google.com/u/0/collection/wE4hqB" target="_blank" rel="noopener noreferrer">
             <paper-ripple></paper-ripple>
             <span>Click here to view more photos <iron-icon icon="open-in-new"/></span>
           </a>
@@ -107,17 +120,12 @@
   </template>
 
   <script>
-    (function () {
+    class PhotoBlock extends Polymer.Element {
+      static get is() { 
+        return 'photo-block'
+      }
+    }
 
-      'use strict';
-
-      Polymer({
-
-        is: 'photo-block'
-
-      });
-      
-    }());
+    customElements.define(PhotoBlock.is, PhotoBlock);
   </script>
-
 </dom-module>
