--- a/src/pages/blog-page.html
+++ b/src/pages/blog-page.html
@@ -1,91 +1,60 @@
-<link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/polymer/polymer-element.html">
 
 <link rel="import" href="../../bower_components/app-route/app-route.html">
-<link rel="import" href="../../bower_components/neon-animation/neon-animated-pages.html">
+<link rel="import" href="../../bower_components/iron-lazy-pages/iron-lazy-pages.html">
 
-<link rel="import" href="../behaviors/page-behavior.html">
-<link rel="import" href="../behaviors/cascaded-behavior.html">
-<link rel="import" href="../behaviors/share-behavior.html">
-<link rel="import" href="blog-list.html">
-<link rel="import" href="post-page.html">
-
+<link rel="import" href="../redux-mixin.html">
+<link rel="import" href="../elements/shared-styles.html">
 
 <dom-module id="blog-page">
-
   <template>
+    <style is="custom-style" include="shared-styles flex flex-alignment"></style>
 
-    <app-route route="{{route}}"
-               pattern="/:page"
-               data="{{pageData}}"
-               tail="{{subRoute}}"></app-route>
+    <style>
 
-    <app-route route="{{subRoute}}"
-               pattern="/:id"
-               data="{{postData}}"></app-route>
+      :host {
+        display: block;
+      }
 
+    </style>
 
-    <neon-animated-pages id="pages"
-                         selected="{{pageData.page}}"
-                         attr-for-selected="name"
-                         selected-attribute="selected">
+    <app-route
+      route="[[route]]"
+      pattern="/:page"
+      data="{{routeData}}"
+      tail="{{subRoute}}"
+    ></app-route>
 
-      <blog-list name=""
-                 app="{{app}}"
-                 posts="[[posts]]"></blog-list>
-
-      <post-page name="posts"
-                 app="{{app}}"
-                 posts="[[posts]]"
-                 post-id="[[postData.id]]"></post-page>
-
-    </neon-animated-pages>
-
+    <iron-lazy-pages attr-for-selected="data-route" selected="[[routeData.page]]">
+      <blog-list-page data-route="" data-path="./blog-list-page.html"></blog-list-page>
+      <post-page data-route="posts" data-path="./post-page.html" route="[[subRoute]]"></post-page>
+    </iron-lazy-pages>
   </template>
 
   <script>
-    (function () {
-      'use strict';
 
-      Polymer({
+    class BlogPage extends ReduxMixin(Polymer.Element) {
+      static get is() {
+        return 'blog-page'
+      }
 
-        is: 'blog-page',
+      static get properties() {
+        return {
+          route: Object
+        };
+      }
 
-        behaviors: [
-          ROE.PageBehavior,
-          ROE.CascadedBehavior
-        ],
+      static get observers() {
+        return [
+          '_routeDataChanged(routeData.page)'
+        ];
+      }
 
-        properties: {
-          app: {
-            type: Object
-          },
+      _routeDataChanged(route) {
+        console.log(route);
+      }
+    }
 
-          route: {
-            type: Object
-          },
-
-          pageData: {
-            type: Object
-          },
-
-          posts: {
-            type: Array
-          }
-        },
-
-        observers: [
-          '_routeChanged(pageData.page)'
-        ],
-
-        _routeChanged: function (page) {
-          if (this.app.page === 'blog' && !page) {
-            this.set('pageData.page', '');
-          }
-        }
-
-      });
-
-    }());
+    customElements.define(BlogPage.is, BlogPage);
   </script>
-
 </dom-module>
