added team, gallery and subscribe

--- a/index.html
+++ b/index.html
@@ -99,8 +99,10 @@
           authDomain: '{$ firebase.authDomain $}',
           databaseURL: '{$ firebase.databaseURL $}',
           projectId: '{$ firebase.projectId $}',
+          storageBucket: '{$ firebase.storageBucket $}',
         });
       });
+     
   </script>
 
   <script src="bower_components/webcomponentsjs/webcomponents-loader.js"></script>
@@ -109,7 +111,7 @@
   <style>
     body {
       margin: 0;
-      font-family: 'Roboto', 'Noto', sans-serif;
+      font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
       font-size: 16px;
       line-height: 1.5;
       min-height: 100vh;
