--- a/src/mixins/scroll-functions.html
+++ b/src/mixins/scroll-functions.html
@@ -4,41 +4,32 @@
     /**
      * Scroll function
      * @param {Number} scrollTargetY - the target scrollY property of the window
-     * @param {Number} speed - time in pixels per second
-     * @return {Number} easing - easing equation to use
+     * @param {Number} time - time of animation
+     * @param {String} easing - easing equation to use
      */
-    scrollToY(scrollTargetY, speed, easing) {
-      var scrollY = window.scrollY,
-        scrollTargetY = scrollTargetY || 0,
-        speed = speed || 2000,
-        easing = easing || 'easeOutSine',
-        currentTime = 0;
-
-      // min time .1, max time .8 seconds
-      let time = Math.max(.1, Math.min(Math.abs(scrollY - scrollTargetY) / speed, .8));
+    scrollToY(scrollTargetY = 0, time = 0, easing = 'easeOutSine') {
+      const scrollY = window.scrollY;
+      let currentTime = 0;
+      const animationTime = time / 1000;
 
       // easing equations from https://github.com/danro/easing-js/blob/master/easing.js
-      let easingEquations = {
-          easeOutSine: function (pos) {
-            return Math.sin(pos * (Math.PI / 2));
-          },
-          easeInOutSine: function (pos) {
-            return (-0.5 * (Math.cos(Math.PI * pos) - 1));
-          },
-          easeInOutQuint: function (pos) {
-            if ((pos /= 0.5) < 1) {
-              return 0.5 * Math.pow(pos, 5);
-            }
-            return 0.5 * (Math.pow((pos - 2), 5) + 2);
+      const easingEquations = {
+        easeOutSine: pos => Math.sin(pos * (Math.PI / 2)),
+        easeInOutSine: pos => (-0.5 * (Math.cos(Math.PI * pos) - 1)),
+        easeInOutQuint: pos => {
+          if ((pos /= 0.5) < 1) {
+            return 0.5 * Math.pow(pos, 5);
           }
-        };
+          return 0.5 * (Math.pow((pos - 2), 5) + 2);
+        }
+      };
 
       // add animation loop
       function tick() {
         currentTime += 1 / 60;
 
-        var p = currentTime / time;
-        var t = easingEquations[easing](p);
+        const p = currentTime / animationTime;
+        const t = easingEquations[easing](p);
 
         if (p < 1) {
           window.requestAnimationFrame(tick);
@@ -48,6 +39,7 @@
           window.scrollTo(0, scrollTargetY);
         }
       }
+
       // call it once to get started
       tick();
     }
