--- a/src/elements/about-block.html
+++ b/src/elements/about-block.html
@@ -1,6 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../mixins/redux-mixin.html">
 <link rel="import" href="shared-animations.html">
 <link rel="import" href="roe-icons.html">
 
@@ -16,7 +17,7 @@
             }
 
             .container {
-                margin: 48px 40px;
+                overflow: hidden;
             }
 
             .description-block {
@@ -28,16 +29,17 @@
                 margin-left: 0;
             }
 
-            .block-cta iron-icon {
-                margin-left: 8px;
-            }
-
             .block-cta .cta-label {
                 font-size: 14px;
             }
 
             .block-subtitle {
                 color: var(--secondary-text-color);
+            }
+
+            .icon-label {
+                color: var(--secondary-text-color);
+                margin-top: 8px;
             }
 
             .icon iron-icon {
@@ -49,24 +51,24 @@
             }
 
             .description-block {
+                min-width: 300px;
                 animation-duration: 1s;
                 animation-fill-mode: both;
                 animation-name: fadeInUp;
             }
 
-            @media (min-width: 868px) {               
-                .description-block {
-                    margin-right: 16px;
-                    padding: 48px;
+            @media (min-width: 868px) {
+
+                .container {
+                    margin: 48px auto;
+                }
+
+                .description-block{
+                    padding: 48px 0;
+                    margin-right: 64px;
+                    padding-right: 16px;
                 }
             }
-
-             @media (min-width: 1150px) {
-                  .description-block {
-                    padding: 48px 64px;
-                    margin: 0 48px;
-                }
-             }
 
         </style>
 
@@ -74,9 +76,16 @@
 
             <div class="description-block" flex>
                 <h2 class="title">About</h2>
-                    <p class="block-subtitle">Richard Osterloh Engineering Ltd offers Embedded Software development and consultancy. We build custom proprietary systems as well as implement open source technologies</p>
-                    <a class="block-cta" href="https://github.com/RichardOsterlohEngineering" target="_blank" rel="noopener noreferrer">
-                        <paper-button>
+
+                   <p class="block-subtitle">Richard Osterloh Engineering Ltd offers Embedded Software development and consultancy. We build custom proprietary systems as well as implement open source technologies</p>
+                     <a class="block-cta"
+                        href="https://github.com/RichardOsterlohEngineering"
+                        ga-on="click"
+                        ga-event-category="github"
+                        ga-event-action="link"
+                        target="_blank"
+                        rel="noopener noreferrer">
+                        <paper-button class="animated icon-right">
                             <span class="cta-label">See our projects on github</span>
                             <iron-icon icon="roe:arrow-right-circle"></iron-icon>
                         </paper-button>
@@ -92,11 +101,12 @@
                     <li>IoT backend systems</li>
                 </ul>
             </div>
+
         </div>
     </template>
 
     <script>
-        class AboutBlock extends Polymer.Element {
+        class AboutBlock extends ReduxMixin(Polymer.Element) {
             static get is() { return 'about-block' }
         }
 
