--- a/src/elements/footer-nav.html
+++ b/src/elements/footer-nav.html
@@ -72,8 +72,9 @@
           class="footer-logo"
           srcset="../../images/roe-logo.png"
           sizing="contain"
-          alt="{$ organizer.name $}">
-        </plastic-image>
+          alt="{$ organizer.name $}"
+          lazy-load
+        ></plastic-image>
       </a>
 
       <div class="copyright">
