--- a/src/elements/shared-styles.html
+++ b/src/elements/shared-styles.html
@@ -8,6 +8,7 @@
       :host {
         --dark-primary-color: #F57C00;
         --default-primary-color: #FF9800;
+        --focused-color: #311B92;
         --light-primary-color: #FFE0B2;
         --text-primary-color: #FFFFFF;
         --accent-color: #FF5252;
@@ -25,7 +26,16 @@
 
         /* Custom */
         --default-background-color: #FAFAFA;
-        --border-radius: 2px;
+        --secondary-background-color: #F5F5F5;
+        --additional-background-color: #f7f7f7;
+        --contrast-additional-background-color: #e8e8e8;
+        --animation: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+
+        --slideAnimation: 0.4s cubic-bezier(0, 0, 0.2, 1);
+        --border-radius: 5px;
+        --box-shadow: 0 3px 3px -2px rgba(0, 0, 0, 0.2), 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 1px 8px 0 rgba(0, 0, 0, 0.12);
+        --font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif; /*TODO Change to Open Sans*/
+        --max-container-width: 1280px;
       }
 
       * {
@@ -59,11 +69,11 @@
       a {
         color: var(--default-primary-color);
         text-decoration: none;
-        border-bottom: 1px solid transparent;
-        transition: border-color .3s ease-out;
+        transition: border-color var(--animation);
       }
 
       body {
+        font-family: var(--font-family);
         text-rendering: optimizeLegibility;
         background-color: #fafafa;
         color: var(--primary-text-color);
@@ -74,14 +84,85 @@
         color: var(--text-primary-color);
       }
 
-      .content {
-        margin: 0 auto;
-        max-width: 1024px;
+      paper-button iron-icon {
+        --iron-icon-height: 20px;
+        --iron-icon-width: 20px;
       }
 
-       .big-icon {
+      paper-button.icon-right iron-icon {
+        margin-left: 8px;
+      }
+
+      paper-button.icon-left iron-icon {
+        margin-right: 8px;
+      }
+
+      paper-button.animated iron-icon {
+        transition: transform var(--animation);
+      }
+
+      paper-button.animated.icon-right:hover iron-icon {
+        transform: translateX(4px);
+      }
+
+      paper-button.animated.icon-left:hover iron-icon {
+        transform: translateX(-4px);
+      }
+
+      .container,
+      .container-narrow {
+        margin: 0 auto;
+        padding: 24px 16px;
+        max-width: var(--max-container-width);
+      }
+
+      .container-narrow {
+        max-width: 800px;
+      }
+
+      .container-title {
+        margin-bottom: 24px;
+        padding: 0;
+        font-size: 32px;
+        line-height: 30px;
+      }
+
+      .big-icon {
         --iron-icon-height: 48px;
         --iron-icon-width: 48px;
+      }
+
+       [slot="markdown-html"] {
+        font-size: 18px;
+        line-height: 1.8;
+        color: var(--primary-text-color);
+      }
+
+      [slot="markdown-html"] h1,
+      [slot="markdown-html"] h2,
+      [slot="markdown-html"] h3 {
+        margin: 48px 0 16px;
+      }
+
+      [slot="markdown-html"] p {
+        margin-top: 0;
+        margin-bottom: 24px;
+      }
+
+      .card {
+        background-color: #fff;
+        box-shadow: 0 0 2px 0 rgba(0,0,0,0.07), 0 2px 2px 0 rgba(0,0,0,0.15);
+        transition: box-shadow var(--animation);
+      }
+      @media (min-width: 640px) {
+        .container,
+        .container-narrow {
+          padding: 32px;
+        }
+
+        .card:hover {
+          box-shadow: var(--box-shadow);
+        }
       }
 
     </style>
