--- a/src/lazy-resources.html
+++ b/src/lazy-resources.html
@@ -1,1 +1,5 @@
+<link rel="import" href="../bower_components/iron-dropdown/iron-dropdown-scroll-manager.html">
 <link rel="import" href="elements/roe-analytics.html">
+<link rel="import" href="elements/subscribe-dialog.html">
+<link rel="import" href="elements/signin-dialog.html">
+<link href="https://fonts.googleapis.com/css?family=Product+Sans:400&amp;lang=en" rel="stylesheet">
