--- a/src/pages/blog-page.html
+++ b/src/pages/blog-page.html
@@ -3,23 +3,13 @@
 <link rel="import" href="../../bower_components/app-route/app-route.html">
 <link rel="import" href="../../bower_components/iron-lazy-pages/iron-lazy-pages.html">
 
-<link rel="import" href="../redux-mixin.html">
-<link rel="import" href="../elements/shared-styles.html">
+<link rel="import" href="../mixins/scroll-functions.html">
+
 
 <dom-module id="blog-page">
   <template>
-    <style is="custom-style" include="shared-styles flex flex-alignment"></style>
-
-    <style>
-
-      :host {
-        display: block;
-      }
-
-    </style>
-
     <app-route
-      route="[[route]]"
+      route="[[_route]]"
       pattern="/:page"
       data="{{routeData}}"
       tail="{{subRoute}}"
@@ -33,25 +23,29 @@
 
   <script>
 
-    class BlogPage extends ReduxMixin(Polymer.Element) {
+    class BlogPage extends ScrollFunctions(Polymer.Element) {
       static get is() {
-        return 'blog-page'
+        return 'blog-page';
       }
 
       static get properties() {
         return {
-          route: Object
+          route: Object,
+          active: Boolean
         };
       }
 
       static get observers() {
         return [
-          '_routeDataChanged(routeData.page)'
+          '_routeChanged(active, route)'
         ];
       }
 
-      _routeDataChanged(route) {
-        console.log(route);
+      _routeChanged(active, route) {
+        if (active && route) {
+          this.scrollToY(0, 200);
+          this.set('_route',  route);
+        }
       }
     }
 
