--- a/src/mixins/redux-mixin.html
+++ b/src/mixins/redux-mixin.html
@@ -6,6 +6,9 @@
 <script src="../../scripts/redux/reducer.js" type="text/javascript"></script>
 
 <script>
+  /* eslint-disable no-undef */
+
+  // eslint-disable-next-line no-unused-vars
   const heroSettings = {$ heroSettings | dump | safe $};
 
   const initialState = {
@@ -13,30 +16,31 @@
       isDrawerOpened: false,
       viewport: {
         isPhone: true,
-        isTabletPlus: false
+        isTabletPlus: false,
       }
     },
     routing: {
-      route: 'home'
+      route: 'home',
     },
     hero: null,
     dialogs: {
       [DIALOGS.SUBSCRIBE]: {
         isOpened: false,
-        data: {}
+        data: {},
       },
       [DIALOGS.SIGNIN]: {
         isOpened: false,
-        data: {}
+        data: {},
       },
     },
     blog: {},
     gallery: [],
     team: [],
     user: {
-      signedIn: false
+      signedIn: false,
     },
-    subscribed: false
+    subscribed: false,
+    toast: {},
   };
 
   const appReducer = (state = initialState, action) => {
@@ -49,13 +53,13 @@
       gallery: galleryReducer(state.gallery, action),
       team: teamReducer(state.team, action),
       user: userReducer(state.user, action),
-      subscribed: subscribeReducer(state.subscribed, action)
+      subscribed: subscribeReducer(state.subscribed, action),
+      toast: toastReducer(state.toast, action),
     };
   };
 
   const store = Redux.createStore(
     appReducer,
-
     window.__REDUX_DEVTOOLS_EXTENSION__ && window.__REDUX_DEVTOOLS_EXTENSION__()
   );
 
