--- a/src/roe-app.html
+++ b/src/roe-app.html
@@ -2,9 +2,9 @@
 <link rel="import" href="../bower_components/polymer/lib/utils/render-status.html">
 <link rel="import" href="../bower_components/polymer/lib/utils/import-href.html">
 
+<link rel="import" href="../bower_components/app-layout/app-scroll-effects/effects/waterfall.html">
 <link rel="import" href="../bower_components/app-layout/app-drawer-layout/app-drawer-layout.html">
 <link rel="import" href="../bower_components/app-layout/app-header-layout/app-header-layout.html">
-<link rel="import" href="../bower_components/app-layout/app-scroll-effects/effects/waterfall.html">
 <link rel="import" href="../bower_components/app-layout/app-drawer/app-drawer.html">
 <link rel="import" href="../bower_components/app-layout/app-header/app-header.html">
 <link rel="import" href="../bower_components/app-layout/app-toolbar/app-toolbar.html">
@@ -12,19 +12,16 @@
 <link rel="import" href="../bower_components/app-route/app-route.html">
 
 <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../bower_components/iron-lazy-pages/iron-lazy-pages.html">
 <link rel="import" href="../bower_components/iron-media-query/iron-media-query.html">
-<link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../bower_components/paper-menu-button/paper-menu-button.html">
 <link rel="import" href="../bower_components/paper-tabs/paper-tabs.html">
 
-<link rel="import" href="../bower_components/iron-lazy-pages/iron-lazy-pages.html">
 <link rel="import" href="../bower_components/plastic-image/plastic-image.html">
-
-<link rel="import" href="../bower_components/iron-lazy-pages/iron-lazy-pages.html">
-<link rel="import" href="../bower_components/plastic-image/plastic-image.html">
-<link rel="import" href="../bower_components/paper-menu-button/paper-menu-button.html">
 
 <link rel="import" href="mixins/utils-functions.html">
 <link rel="import" href="mixins/redux-mixin.html">
@@ -250,6 +247,7 @@
       pattern="/:page"
       data="{{routeData}}"
       tail="{{subroute}}"
+      query-params="{{queryParams}}"
     ></app-route>
 
     <app-drawer-layout drawer-width="300px" force-narrow fullbleed>
@@ -395,7 +393,6 @@
     </app-drawer-layout>
 
     <subscribe-dialog
-        id="subscribeDialog"
         opened="[[dialogs.subscribe.isOpened]]",
         data="[[dialogs.subscribe.data]]"
         with-backdrop
@@ -403,12 +400,12 @@
     </subscribe-dialog>  
 
     <signin-dialog
-        id="signinDialog"
         opened="[[dialogs.signin.isOpened]]"
         with-backdrop>
     </signin-dialog>  
 
     <roe-analytics></roe-analytics>
+    <toast-element></toast-element>
   </template>
 
   <script>
@@ -544,11 +541,17 @@
 
       _dialogToggled(dialogs) {
         if (this._openedDialog) {
-          Polymer.IronDropdownScrollManager.removeScrollLock(this.shadowRoot.querySelector(`#${this._openedDialog}Dialog`));
+          document.body.style.overflow = '';
           this._openedDialog = null;
         }
-        this._openedDialog = Object.keys(dialogs).find(key => dialogs[key].isOpened);
-        this._openedDialog && Polymer.IronDropdownScrollManager.pushScrollLock(this.shadowRoot.querySelector(`#${this._openedDialog}Dialog`));
+        this._openedDialog = Object.keys(dialogs).find((key) => dialogs[key].isOpened);
+        if (this._openedDialog) {
+          document.body.style.overflow = 'hidden';
+        }
+      }
+
+      _removeQueryParams() {
+        this.set('queryParams', null);
       }
 
       _authStatusChanged(signedIn) {
